k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: datashield
  labels:
    app: datashield-osint
